@@ -9,24 +9,27 @@
   - This version of the data access layer works on two databases (main/order),
   - using JNDI DataSources with JtaTransactionManager. It obviously depends on
   - JTA support in the container, and on pre-configured container DataSources.
+  -
+  - This version also uses the jndi:xxx namespace introduced in Spring 2.0
+  - to configured JNDI referenced objects.
   -->
-<beans>
+<beans xmlns="http://www.springframework.org/schema/beans"
+	   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	   xmlns:jndi="http://www.springframework.org/schema/jndi"
+	   xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans.xsd
+       http://www.springframework.org/schema/jndi http://www.springframework.org/schema/jndi/spring-jndi.xsd">
 
 	<!-- ========================= RESOURCE DEFINITIONS ========================= -->
 
 	<!-- Main JNDI DataSource for J2EE environments -->
 	<!-- Refers to the main database, containing product and account data -->
 	<!-- (see dataAccessContext-local.xml for an alternative) -->
-	<bean id="dataSource" class="org.springframework.jndi.JndiObjectFactoryBean">
-		<property name="jndiName" value="java:comp/env/jdbc/jpetstore"/>
-	</bean>
+	<jndi:lookup id="dataSource" jndiName="java:comp/env/jdbc/jpetstore"/>
 
 	<!-- Additional JNDI DataSource for J2EE environments -->
 	<!-- Refers to the order database, containing order data -->
 	<!-- (see dataAccessContext-local.xml for an alternative) -->
-	<bean id="orderDataSource" class="org.springframework.jndi.JndiObjectFactoryBean">
-		<property name="jndiName" value="java:comp/env/jdbc/jpetstore-order"/>
-	</bean>
+	<jndi:lookup id="dataSource" jndiName="java:comp/env/jdbc/jpetstore-order"/>
 
 	<!-- Transaction manager that delegates to JTA (for a transactional JNDI DataSource) -->
 	<!-- Necessary here due to the need for distributed transactions across two databases -->
